httpbin/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: shw
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: httpbin
